Upgrade to spring boot 4.0.1